--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-# This file is empty now, we don't need it until Chapter 8
+michael:
+  name: Michael Example
+  email: michael@example.com
+  password_digest: <%= User.digest "password" %>
